# concurrency

./: .gitignore  .releaserc.json  CHANGELOG.md  CMakeLists.txt  ConcurrencyStandalone.html  ConcurrencyStandalone.js  ConcurrencyStandalone.wasm  ConcurrencyStandalone.wasm.js  JobDeque_8h.html  Job_8h.html  README.md  README_8md.html  RunningState_8h.html  Scheduler_8h.html  StealingDeque_8h.html  Worker_8h.html  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  annotated.html  classconcurrency_1_1Concurrency.html  classconcurrency_1_1JobDeque.html  classconcurrency_1_1JobQueue.html  classconcurrency_1_1Scheduler.html  classconcurrency_1_1StealingQueue.html  classconcurrency_1_1Worker.html  classconcurrency_1_1_concurrency.html  classgreeter_1_1_greeter.html  concurrency_8h.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_31a378c84b956866319ca9d9294f1959.html  dir_630894f731d2a53c07a4813eb7add334.html  dir_efc517448da1cf4216d09f3867bece28.html  files.html  greeter_8h.html  index.html  modules.html  namespaceconcurrency.html  namespacegreeter.html  namespaces.html  (+5 more)
.github/workflows/: documentation.yaml  install._yml  install.yml  nightly-release.yml  release-emscripten.yml  release.yml  standalone.yml  style.yml  test.yml
cmake/: pre.js
documentation/: CMakeLists.txt  conf.py
html/: shell.html  thread.js
include/concurrency/: Job.h  JobDeque.h  RunningState.h  Scheduler.h  Worker.h  (+2 more)
source/: Job.cpp  JobDeque.cpp  Scheduler.cpp  StealingDeque.cpp  Worker.cpp  concurrency.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
(+1 files in other folders)
